--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:CdNcHvh9bBZM47T5UAvdozsJVkLT3u99LjiX35ICBsQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=united_insurance
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -26,9 +26,10 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=d9b4ec50f9afd1
+MAIL_PASSWORD=ba7708d262b2b3
+MAIL_FROM_ADDRESS=coolsijan12@gmail.com
+MAIL_FROM_NAME=Prologic Solutions
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
